--- a/q10/q10/index.html
+++ b/q10/q10/index.html
@@ -16,15 +16,39 @@
   <div class="wrapper">
     <h3 class="question--title">Q10-1 フラットなボタン</h3>
     <!-- Q10-1ここから -->
+    <div class="buttons">
+      <div class="button red-button">Button
+      </div>
+      <div class="button blue-button">Button</div>
+      <div class="button green-button">Button</div>
+    </div>
     <!-- Q10-1ここまで -->
     <h3 class="question--title">Q10-2 影を付けたボタン</h3>
     <!-- Q10-2ここから -->
+    <div class="buttons">
+      <div class="button red-button2">Button
+      </div>
+      <div class="button blue-button2">Button</div>
+      <div class="button green-button2">Button</div>
+    </div>
     <!-- Q10-2ここまで -->
     <h3 class="question--title">Q10-3 押した感覚のあるボタン</h3>
     <!-- Q10-3ここから -->
+    <div class="buttons3">
+      <div class="button red-button3">Button
+      </div>
+      <div class="button blue-button3">Button</div>
+      <div class="button green-button3">Button</div>
+    </div>
     <!-- Q10-3ここまで -->
     <h3 class="question--title">Q10-4 カーソルを当てた時にスタイルが変わるボタン</h3>
     <!-- Q10-4ここから -->
+    <div class="buttons">
+      <div class="button red-button4">Button
+      </div>
+      <div class="button blue-button4">Button</div>
+      <div class="button green-button4">Button</div>
+    </div>
     <!-- Q10-4ここまで -->
   </div>
 </body>
