--- a/q6/q6/index.html
+++ b/q6/q6/index.html
@@ -12,13 +12,19 @@
 
 <body>
   <!-- Q6回答はここから -->
-  <!-- Q6回答はここまで -->
-  <main>
-    <div class="wrapper">
-      <h1 class="title">基本レイアウト・パーツ</h1>
-      <h2 class="sub--title">Q6ナビバー</h2>
+  <header>
+    <div class="container wrapper">
+          <h1 id="title">SHOP</h1>
+          <nav id="navi">
+            <ul>
+              <li><a href="#">HOME</a></li>
+              <li><a href="#">MenuList</a></li>
+              <li><a href="#">Access</a></li>
+            </ul>
+          </nav>
     </div>
-  </main>
+  </header>
+  <!-- Q6回答はここまで -->
 </body>
 
 </html>
