--- a/q9/q9/index.html
+++ b/q9/q9/index.html
@@ -17,57 +17,103 @@
     <section>
       <h3 class="question--title">Q9-1 フェードイン</h3>
       <!-- Q9-1ここから -->
+      <div class="box1 q1"></div>
       <!-- Q9-1ここまで -->
       <h3 class="question--title">Q9-2 フェードアウト</h3>
       <!-- Q9-2ここから -->
+      <div class="box1 q2"></div>
       <!-- Q9-2ここから -->
       <!-- Q9-2ここまで -->
       <!-- Q9-2ここまで -->
       <h3 class="question--title">Q9-3 回転</h3>
       <!-- Q9-3ここまで -->
+      <div class="box1 q3"></div>
       <!-- Q9-4ここまで -->
     </section>
     <section>
       <h3 class="question--title">Q9-4 ホバー時に色変更</h3>
       <!-- Q9-4ここまで -->
+      <div class="box2 q4"></div>
       <!-- Q9-4ここまで -->
       <h3 class="question--title">Q9-5 ホバー時に回転</h3>
       <!-- Q9-5ここまで -->
+      <div class="box3 q5"></div>
       <!-- Q9-5ここまで -->
       <h3 class="question--title">Q9-6 ホバー時に上にスライド</h3>
       <!-- Q9-6ここまで -->
+      <div class="box4"></div>
       <!-- Q9-7ここまで -->
       <h3 class="question--title">Q9-7 ホバー時に右にスライド</h3>
       <!-- Q9-7ここまで -->
+      <div class="box5"></div>
       <!-- Q9-7ここまで -->
       <h3 class="question--title">Q9-8 ホバー時に縦に引き延ばし</h3>
       <!-- Q9-8ここまで -->
+      <div class="box6"></div>
       <!-- Q9-8ここまで -->
       <h3 class="question--title">Q9-9 ホバー時に箱を横に引き延ばし</h3>
       <!-- Q9-9ここまで -->
+      <div class="box7"></div>
       <!-- Q9-9ここまで -->
       <h3 class="question--title">Q9-10 ホバー時に箱の中に枠線</h3>
       <!-- Q9-10ここまで -->
+      <div class="box8"></div>
       <!-- Q9-10ここまで -->
       <h3 class="question--title">Q9-11 ホバー時に箱に影をつける</h3>
       <!-- Q9-11ここまで -->
+      <div class="box9"></div>
       <!-- Q9-11ここまで -->
     </section>
     <section>
       <h3 class="question--title">Q9-12 サークルの回転</h3>
       <!-- Q9-13ここまで -->
+      <div class="box10"></div>
       <!-- Q9-13ここまで -->
       <h3 class="question--title">Q9-13 カードリストのホバー</h3>
       <div class="check--sample">
         <!-- カード内のテキストはこちらを使ってください -->
-        <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-        ut labore et dolore magna
-        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis
-        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        Excepteur
-        sint
-        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. -->
+        <div class="container">
+          <article class="article">
+            <div class="img">
+              <img src="img/1005-200x300.jpg" alt="">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+              ut labore et dolore magna
+              aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis
+              aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur
+              sint
+              occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </article>
+          <article class="article">
+            <div class="img">
+              <img src="img/1005-200x300.jpg" alt="">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+              ut labore et dolore magna
+              aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis
+              aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur
+              sint
+              occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </article>
+          <article class="article">
+            <div class="img">
+              <img src="img/1005-200x300.jpg" alt="">
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+              ut labore et dolore magna
+              aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis
+              aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur
+              sint
+              occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </article>
+        </div>
+        
         <!-- Q9-14ここまで -->
         <!-- Q9-14ここまで -->
       </div>
